libraries += static_library('fvwm3',
  sources: [
    'BidiJoin.c',
    'Bindings.c',
    'ClientMsg.c',
    'ColorUtils.c',
    'Colorset.c',
    'CombineChars.c',
    'Cursor.c',
    'Event.c',
    'FBidi.c',
    'FEvent.c',
    'FGettext.c',
    'FImage.c',
    'FRender.c',
    'FRenderInit.c',
    'FScreen.c',
    'FShape.c',
    'FTips.c',
    'Fft.c',
    'Ficonv.c',
    'Flocale.c',
    'FlocaleCharset.c',
    'Grab.c',
    'Graphics.c',
    'Module.c',
    'Parse.c',
    'Picture.c',
    'PictureBase.c',
    'PictureGraphics.c',
    'PictureImageLoader.c',
    'PictureUtils.c',
    'Rectangles.c',
    'Strings.c',
    'System.c',
    'Target.c',
    'WinMagic.c',
    'XError.c',
    'XResource.c',
    'cJSON.c',
    'charmap.c',
    'envvar.c',
    'fio.c',
    'flist.c',
    'fqueue.c',
    'fsm.c',
    'fvwmlib3.c',
    'fvwmrect.c',
    'fvwmsignal.c',
    'getpwuid.c',
    'gravity.c',
    'log.c',
    'modifiers.c',
    'safemalloc.c',
    'setpgrp.c',
    'strlcat.c',
    'strlcpy.c',
    'strtonum.c',
    'timeout.c',
    'wcontext.c',
    'wild.c',
  ],
  include_directories: [lib_includes, fvwm_includes],
  dependencies: all_found_deps,
)
