add_subdirectory(FvwmScript)
add_subdirectory(FvwmMFL)

#add_subdirectory(FvwmAnimate)
#add_subdirectory(FvwmAuto)
#add_subdirectory(FvwmBacker)
#add_subdirectory(FvwmButtons)
#add_subdirectory(FvwmConsole)
#add_subdirectory(FvwmEvent)
#add_subdirectory(FvwmForm)
#add_subdirectory(FvwmIconMan)
#add_subdirectory(FvwmIdent)
#add_subdirectory(FvwmPager)
#add_subdirectory(FvwmPerl)
#add_subdirectory(FvwmRearrange)
