## Process this file with automake to create Makefile.in

SUBDIRS = FvwmAnimate FvwmAudio FvwmAuto FvwmBacker @FVWMBANNER@ FvwmButtons \
	FvwmCommand FvwmConsole \
	FvwmCpp FvwmDebug FvwmEvent FvwmForm FvwmIconBox FvwmIconMan \
	FvwmIdent FvwmM4 FvwmPager FvwmRearrange \
	FvwmSave FvwmSaveDesk @FVWMSCRIPT@ FvwmScroll \
	FvwmTalk FvwmTaskBar FvwmWharf FvwmWinList @FVWMGTK@

EXTRA_SUBDIRS = FvwmBanner FvwmScript
