## Process this file with automake to create Makefile.in

SUBDIRS = FvwmAnimate FvwmAudio FvwmAuto FvwmBacker FvwmBanner	\
	FvwmButtons FvwmCommand FvwmConsole			\
	FvwmCpp FvwmDebug FvwmEvent FvwmForm FvwmGtk		\
	FvwmIconBox FvwmIconMan					\
	FvwmIdent FvwmM4 FvwmPager FvwmRearrange		\
	FvwmSave FvwmSaveDesk FvwmScript FvwmScroll		\
	FvwmTalk FvwmTaskBar FvwmWharf FvwmWinList 

