## Process this file with automake to create Makefile.in

SUBDIRS = FvwmAnimate FvwmAuto FvwmBacker FvwmBanner		\
	FvwmButtons FvwmCommand FvwmConsole			\
	FvwmCpp FvwmDebug FvwmEvent FvwmForm FvwmGtk		\
	FvwmIconBox FvwmIconMan					\
	FvwmIdent FvwmM4 FvwmPager FvwmRearrange		\
	FvwmSave FvwmSaveDesk FvwmScript FvwmScroll		\
	FvwmTaskBar FvwmWharf FvwmWinList

