EXTRA_DIST = README.martys_marbles arena.xpm background5.xpm \
	   background8.xpm bg_blu.xpm blue7mra.xpm blue7mrb.xpm \
	   circle_weave.xpm cloth.xpm concrete.xpm cyan5mra.xpm \
	   cyan5mrb.xpm flames.xpm funkyblue_weave.xpm gradient.xpm \
	   gray_stucco.xpm gree5mra.xpm gree5mrb.xpm green_stucco.xpm \
	   grey5mra.xpm grey5mrb.xpm greysea.xpm honey.xpm marbled.xpm \
	   marbled2.xpm maze3.xpm multicolor1_rock.xpm \
	   multicolor3_rock.xpm ora5mra.xpm ora5mrb.xpm \
	   plasma_maze.xpm pool.xpm pur5mra.xpm pur5mrb.xpm \
	   raindrops_dark.xpm red5mra.xpm red5mrb.xpm red_rock.xpm \
	   red_stucco.xpm rough.xpm slate.xpm slate_green.xpm \
	   space.xpm space2.xpm tan_paper.xpm tiles.xpm wax.xpm \
	   weave-red.xpm wood.xpm wood2.xpm worm.xpm xenon.xpm \
	   yel5mra.xpm yel5mrb.xpm yellow_weave.xpm
